Impressum: Datenschutz changed company name from BiosLehm to BiosBau

--- a/public/biosbau.com_20220102/index.html
+++ b/public/biosbau.com_20220102/index.html
@@ -1952,7 +1952,7 @@
                                         </p>
                                         <p>
                                             Datenschutz:<br>
-                                            BiosLehm verwendet Ihre Daten unter Einhaltung des Datenschutzgesetzes und bemüht sich die Daten so sicher wie möglich zu erfassen und zu verwahren. Eine Haftung für Fremdverschulden kann nicht übernommen werden. Ihre Daten werden keinesfalls ohne Ihre Zustimmung an Dritte weitergegeben.
+                                            BiosBau verwendet Ihre Daten unter Einhaltung des Datenschutzgesetzes und bemüht sich die Daten so sicher wie möglich zu erfassen und zu verwahren. Eine Haftung für Fremdverschulden kann nicht übernommen werden. Ihre Daten werden keinesfalls ohne Ihre Zustimmung an Dritte weitergegeben.
                                         </p>
 
                                         <h5>Web Analytics:</h5>
