--- a/public/biosbau.com_20220102/index.html
+++ b/public/biosbau.com_20220102/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
-<!-- test -->
+
 <head>
 
     <meta charset="utf-8">
@@ -522,7 +522,7 @@
                         <div class="card-body p-3">
                             <div class="row featurette pb-3 pr-3 px-3">
                                 <div class="col-md-3 pt-5">
-                                    <img class="featurette-image img-fluid rounded shadow img-rised mx-auto" alt="500x500" src="assets//images/bernhard/B-W%20%C3%BCberuns.png">
+                                    <img class="featurette-image img-fluid rounded shadow img-rised mx-auto" style="margin-bottom: 0.5em;" alt="500x500" src="assets/images/bernhard/Bernhard.jpg">
                                     <p class="text-center">Bernhard Wallner <br>Geschäftsführer</p>
                                 </div>
                                 <div class="col-md-9 pt-5">
@@ -537,7 +537,7 @@
                                         </ul>
                                         <p class="lead">eingesetzt wird und haben die Produktion des BiosLehm gestartet.</p>
                                 </div>
-                                <div class="col-md-12">
+                                <div class="col-md-12" style="margin-top: 1em;">
                                     <p class="lead">Ab 2012 haben wir begonnen ein eigenes BiosBau-System zu entwickeln.</p>
                                     <p class="lead">Seit 2017 verarbeiten wir den BiosLehm auch selbst und seit 2019 werden die ersten Häuser zur Gänze im <br>BiosBau-System errichtet.</p>
                                 </div>
