Update Bernhard picture

--- a/public/platin-bm.com/index.html
+++ b/public/platin-bm.com/index.html
@@ -187,7 +187,7 @@
                 </div>
 
                 <div class="col-10 col-sm-6 col-md-3">
-                    <img style="margin: auto;" alt="image" class="img-fluid" id="bernhard_img" src="assets/images/bernhard/B-W-ueberuns.png">
+                    <img style="margin: auto;" alt="image" class="img-fluid" id="bernhard_img" src="assets/images/bernhard/Bernhard.jpg">
                 </div>
             </div>
         </div>
