Update Bernhard picture

--- a/public/palladiumbau.com_20210706/index.html
+++ b/public/palladiumbau.com_20210706/index.html
@@ -83,7 +83,7 @@
         <div class="container">
             <div class="row text-left align-items-center">
                 <div class="col-10 col-sm-6 m-auto m-lg-0 col-lg-4 pt-3 pb-3">
-                    <img alt="image" class="img-fluid" src="assets/images/Pall-bilder/Jakob.gif">
+                    <img alt="image" class="img-fluid" src="assets/images/Pall-bilder/Bernhard.jpg">
                 </div>
 
                 <div class="col-12 col-lg-7 offset-lg-1 pt-4 pt-lg-0">
