changes in platin-bm

--- a/public/platin-bm.com/index.html
+++ b/public/platin-bm.com/index.html
@@ -52,6 +52,9 @@
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#kontakt">Kontakt</a>
                     </li>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" href="#">Rechtsanwaltskanzlei</a>
+                    </li> -->
                 </ul>
             </div><!-- / .collapse -->
         </div><!-- / .container -->
@@ -101,8 +104,113 @@
                 </h5>
             </div>
         </div>
+        <div class="row pt-5">
+            <!-- Michael -->
+            <div class="col-xl-4 mx-auto text-center">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-10 offset-lg-1">
+                            <h2>DI (FH) Michael BERNHART</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-10 offset-lg-1">
+                            <!-- <h5 class="pt-2 pb-3">HTL für Wirtschafsingenieurwesen</h5>
+                            <h5 class="pt-2 pb-3">Fachhochschule für Produkttechnologie und Wirtschaft</h5>
+                            <h5 class="pt-2 pb-3">seit über 18 Jahren selbstständig</h5> -->
+                            <h5 class="pt-2 pb-3">
+                                HTL für Wirtschafsingenieurwesen <br>
+                                Fachhochschule für Produkttechnologie und Wirtschaft <br>
+                                seit über 18 Jahren selbstständig
+                            </h5>
+                        </div>
+                    </div>
+                    <div style="margin-top: 3em" class="row">
+                        <div style="text-align: center;" class="col">
+                            <h6><b>Was können Sie von mir erwarten:</b></h6>
+                            <p>
+                                Verlässlichkeit, Ausdauer und Zielerreichung<br>
+                                Klare Kommunikation
+                            </p>
+                        </div>
+                    </div>
+                    <div style="margin-top: 2em" class="row">
+                        <div style="text-align: center;" class="col">
+                            <h6><b>Warum mache ich das?</b></h6>
+                            <p>Es gibt nichts Besseres als Ihnen die Sicherheit für den Bestand und Betrieb Ihres Gebäudes zu geben.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Bild -->
+            <div class="col-xl-4 mx-auto text-center">
+                <div class="row">
+                    <img class="img-fluid" src="./assets/images/Bernhard-Michael.jpeg" alt="Bernhard Wallner und Michael Bernhart">
+                </div>
+            </div>
+            <!-- Bernhard -->
+            <div class="col-xl-4 mx-auto text-center">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-10 offset-lg-1">
+                            <h2>Bernhard WALLNER</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-10 offset-lg-1">
+                            <h5 class="pt-2 ">
+                                Seit 1994 Unternehmer im Bereich<br>
+                                Informationstechnologie, Riskmanagement, Produktion & Bau
+                            </h5>
+                        </div>
+                    </div>
+                    <div style="margin-top: 2em" class="row">
+                    <!-- <div style="margin-top: 3.5em" class="row"> -->
+                        <div style="text-align: center;" class="col">
+                            <div class="bernhard_text">
+                                <p>
+                                    Wissen kann Materie schaffen,<br>
+                                    Materie kann Leid schaffen,<br>
+                                    Leid kann Wissen schaffen!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="margin-top: 2em" class="row">
+                        <div style="text-align: center;" class="col">
+                            <div class="bernhard_text">
+                                <p>
+                                    Selbsterhaltung bedeutet auch<br>
+                                    sich mit Materie zu umgeben,<br>
+                                    deren Bestand Sie sichern!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="margin-top: 2em" class="row">
+                        <div style="text-align: center;" class="col">
+                            <div class="bernhard_text">
+                                <p>
+                                    Materie auch zum Vorteil Anderer,<br>
+                                    führt zur Zufriedenheit aller und<br>
+                                    kann zum eigenen Glück führen!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div style="margin-top: 5em;" class="row">
+            <div class="col-10 offset-1 mx-auto text-center">
+                <h3>Authentisch und innovativ – unsere Erfahrung ist Ihr Vorteil</h3>
+                <p style="padding-top: 0.5em; margin-bottom: 2em;">
+                    Im Unternehmen der Platin BM als Versicherungstreuhänder können wir auf das Know-how von mehr als 25 Jahren aus verschiedenen Bereichen zugreifen. Das seit dem Jahre 1994 und davor erlangte neue und alte Wissen setzen die Gesellschafter geballt für die Durchsetzung in den Spezialgebieten, Versicherungsmakler, Bauträger, Bauausführender und Fachplaner ein. Gepaart aus der Verknüpfung von Versischerungs-, Bau-, Vergabe- und Insolvenzrecht setzen wir Ihre Forderungen gemeinsam mit unseren Partnern - <a href="https://www.anwalt-koch.at">KJ Rechtsanwälte</a> und <a href="https://meta-legal.at">META legal</a> - durch.
+                </p>
+            </div>
+        </div>
 
-        <!-- Michael Bernhart -->
+<!-- 
         <div style="margin-top: 5em;" class="container">
             <div class="row text-left align-items-center">
                 <div class="col-10 col-sm-6 col-lg-4">
@@ -111,9 +219,6 @@
 
                 <div class="col-12 col-lg-7 offset-lg-1 pt-4 pt-lg-0">
                     <h2>DI (FH) Michael BERNHART</h2>
-                    <!-- 
-                        Was ist gemeint mit "Riskmanagement - Produkttech. Wirt." - wohin?
-                     -->
                     <h5 class="pt-2 pb-3">
                         HTL für Wirtschafsingenieurwesen - 
                         Fachhochschule für Produkttechnologie und Wirtschaft - 
@@ -136,7 +241,6 @@
             </div>
         </div>
 
-        <!-- Bernhard Wallner -->
         <div style="margin-top: 8em;" class="container">
             <div class="row text-left align-items-center">
                 <div class="col-12 col-md-9  pt-4 pt-lg-0">
@@ -190,7 +294,7 @@
                     <img style="margin: auto;" alt="image" class="img-fluid" id="bernhard_img" src="assets/images/bernhard/Bernhard.jpg">
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
 
     <div style="margin: 10em 0;" id="whitespace"></div>
@@ -243,7 +347,7 @@
 
             <div class="row mt-4">
                 <div class="col text-center">
-                    <p class="m-0 text-center text-dark">© 2022 Platin | <a href="#myModal" data-toggle="modal">Impressum</a>
+                    <p class="m-0 text-center text-dark">© 2023 Platin | <a href="#myModal" data-toggle="modal">Impressum</a>
                 </div>
             </div><!-- / .row -->
             <!-- Modal -->
