Section:  ueber gemeinsames Bild + Partner Link in navbar

--- a/public/platin-bm.com/index.html
+++ b/public/platin-bm.com/index.html
@@ -50,11 +50,11 @@
                         <a class="nav-link js-scroll-trigger" href="#uns">Über uns</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#partner">Partner</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#kontakt">Kontakt</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#">Rechtsanwaltskanzlei</a>
-                    </li> -->
                 </ul>
             </div><!-- / .collapse -->
         </div><!-- / .container -->
@@ -104,7 +104,18 @@
                 </h5>
             </div>
         </div>
-        <div class="row pt-5">
+
+        <div class="row fdb-block bg-primary pt-5 pb-5 " id="partner">
+            <div class="col-10 offset-1 mx-auto text-center">
+                <h3>Authentisch und innovativ – unsere Erfahrung ist Ihr Vorteil</h3>
+                <p style="padding-top: 0.5em;">
+                    Im Unternehmen der Platin BM als Versicherungstreuhänder können wir auf das Know-how von mehr als 25 Jahren aus verschiedenen Bereichen zugreifen. Das seit dem Jahre 1994 und davor erlangte neue und alte Wissen setzen die Gesellschafter geballt für die Durchsetzung in den Spezialgebieten, Versicherungsmakler, Bauträger, Bauausführender und Fachplaner ein. Gepaart aus der Verknüpfung von Versischerungs-, Bau-, Vergabe- und Insolvenzrecht setzen wir Ihre Forderungen gemeinsam mit unseren Partnern - <a href="https://www.anwalt-koch.at">KJ Rechtsanwälte</a> und <a href="https://meta-legal.at">META legal</a> - durch.
+                </p>
+            </div>
+        </div>
+
+
+        <div class="row pt-5" style="margin-bottom: 3em;">
             <!-- Michael -->
             <div class="col-xl-4 mx-auto text-center">
                 <div class="container">
@@ -201,16 +212,8 @@
                 </div>
             </div>
         </div>
-        <div style="margin-top: 5em;" class="row">
-            <div class="col-10 offset-1 mx-auto text-center">
-                <h3>Authentisch und innovativ – unsere Erfahrung ist Ihr Vorteil</h3>
-                <p style="padding-top: 0.5em; margin-bottom: 2em;">
-                    Im Unternehmen der Platin BM als Versicherungstreuhänder können wir auf das Know-how von mehr als 25 Jahren aus verschiedenen Bereichen zugreifen. Das seit dem Jahre 1994 und davor erlangte neue und alte Wissen setzen die Gesellschafter geballt für die Durchsetzung in den Spezialgebieten, Versicherungsmakler, Bauträger, Bauausführender und Fachplaner ein. Gepaart aus der Verknüpfung von Versischerungs-, Bau-, Vergabe- und Insolvenzrecht setzen wir Ihre Forderungen gemeinsam mit unseren Partnern - <a href="https://www.anwalt-koch.at">KJ Rechtsanwälte</a> und <a href="https://meta-legal.at">META legal</a> - durch.
-                </p>
-            </div>
-        </div>
 
-<!-- 
+        <!-- 
         <div style="margin-top: 5em;" class="container">
             <div class="row text-left align-items-center">
                 <div class="col-10 col-sm-6 col-lg-4">
@@ -373,8 +376,9 @@
                                         <p>Firmenbuchnummer:<br>FN530380x</p>
 
                                         <h5>Ansprechpartner</h5>
+                                        
                                         <p>Name:<br>
-                                            Michael BERNHART
+                                            Michael BERNHART und Bernhard WALLNER
                                         </p>
                                         <p>Funktion:<br>
                                             Geschäftsführer
