--- a/public/sct/index.html
+++ b/public/sct/index.html
@@ -154,12 +154,12 @@
                                         <div class="row">
                                             <div class="col-lg-2"></div>
                                             <div class="col-lg-8">
-                                                <h2 class="display-5 ">Energieerzeugung - Technikraum</h2>
+                                                <h2 class="display-5">Energieerzeugung - Technikraum</h2>
                                                 <!-- <p class="lead"></p> -->
                                                 <ul class="lead">
                                                     <li>Wärmepumpe</li>
                                                     <li>Anschlussset Wärmepumpe</li>
-                                                    <li>hzdraulische Weiche</li>
+                                                    <li>hydraulische Weiche</li>
                                                     <li>Heizstäbe - Zusatzheizungen</li>
                                                     <li>Rückschlagventil</li>
                                                     <li>Expansionsgefäße</li>
@@ -180,7 +180,7 @@
                         </div><!-- / .modalCookie1 -->
                         <div class="card-body">
                             <h4 class="card-title">
-                                <a href="#modalCookie1" data-toggle="modal">Energieerzeugung & -gewinnung</a>
+                                <a href="#modalCookie1" data-toggle="modal" style="color: #000000 !important;">Energieerzeugung & -gewinnung</a>
                             </h4>
                         </div><!-- / .body -->
                     </div><!-- / .card -->
@@ -221,7 +221,7 @@
                         </div><!-- / .modalCookie2  -->
                         <div class="card-body">
                             <h4 class="card-title">
-                                <a href="#modalCookie2" data-toggle="modal">PV-Anlage</a>
+                                <a href="#modalCookie2" data-toggle="modal" style="color: #000000 !important;">PV-Anlage</a>
                             </h4>
                         </div><!-- / .body -->
                     </div><!-- / .card -->
@@ -247,7 +247,7 @@
                                         <div class="row">
                                             <div class="col-lg-2"></div>
                                             <div class="col-lg-8">
-                                                <h2 class="display-5 ">Energieverteilung & -gewinnung</h2>
+                                                <h2 class="display-5 " >Energieverteilung & -gewinnung</h2>
                                                 <!-- <p class="lead"></p> -->
                                                 <ul class="lead">
                                                     <li>Kühlung PV-Module</li>
@@ -270,7 +270,7 @@
                         </div><!-- / .modalCookie3 -->
                         <div class="card-body">
                             <h4 class="card-title">
-                                <a href="#modalCookie3" data-toggle="modal">Energieverteilung</a>
+                                <a href="#modalCookie3" data-toggle="modal" style="color: #000000 !important;">Energieverteilung</a>
                             </h4>
                         </div><!-- / .body -->
                     </div><!-- / .card -->
@@ -332,7 +332,7 @@
                         </div><!-- / .modalCookie4 -->
                         <div class="card-body">
                             <h4 class="card-title">
-                                <a href="#modalCookie4" data-toggle="modal">Baustoffe</a>
+                                <a href="#modalCookie4" data-toggle="modal" style="color: #000000 !important;">Baustoffe</a>
                             </h4>
                         </div><!-- / .body -->
                     </div><!-- / .card -->
